--- a/Admin_Side/dashboard.css
+++ b/Admin_Side/dashboard.css
@@ -9,7 +9,9 @@
     font-family: poppins;
     font-style: normal;
 }
-
+body{
+    overflow: hidden;
+}
 .container{
   
     display: flex;
@@ -409,9 +411,6 @@
     border-radius: 100px;
 }
 
-.general-report .right .purok-list{
-
-}
 
 
 .general-report .right .purok-list td{
@@ -464,3 +463,166 @@ left:36px;
     border-top-left-radius: 0px;
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.records-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    justify-content: center;
+    align-items: center;
+}
+
+.records-modal-content {
+    margin: 4% auto;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 8px;
+    padding: 20px;
+    animation: fadeIn 0.3s ease-in-out;
+    
+}
+
+/* Fade-in animation for modal */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.table-container {
+    width: 100%;
+    max-width: 1200px;
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid #DDDDDD;
+    padding: 20px;
+}
+
+.table-title {
+    text-align: center;
+    color: #333;
+    font-size: 14px;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+.styled-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0 auto;
+    text-align: left;
+    max-height: 100px;
+    overflow-y: auto;
+}
+
+.styled-table th, .styled-table td {
+    padding: 16px 20px;
+    vertical-align: top;
+}
+
+.styled-table thead {
+    background-color: #3E4BBA;
+    color: white;
+}
+
+.styled-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.styled-table tbody tr:hover {
+    background-color: #e2e2e2;
+}
+
+.styled-table th {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.styled-table td {
+    font-size: 14px;
+}
+
+.styled-table td strong {
+    color: #3E4BBA;
+}
+.button-actions{
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+}
+.button-actions .print{
+    cursor: pointer;
+    padding: 7px;
+    width: 100px;
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+    background-color: #3E4BBA;
+    border: 1px solid #3E4BBA;
+    border-radius: 5px;
+    margin-right: 10px;
+    transition: all 0.2s ease;
+}
+.button-actions .print:hover{
+    background-color: #272f78;
+    border: 1px solid white;
+    color: white;
+}
+
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .table-container {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .table-title {
+        font-size: 22px;
+    }
+
+    .styled-table th, .styled-table td {
+        font-size: 14px;
+        padding: 12px 15px;
+    }
+}
+
+.healthRec-table{
+    overflow-y: hidden;
+    max-height: 10px;
+    background-color: red;
+}
+
+
